--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ ipython_config.py
 #   git rm -r .ipynb_checkpoints/
 
 # End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks
+
+# Data Outputs
+
+*.geojson
+*.csv
+Images/*
